[package]
name = "furse"
version = "1.5.9"
edition = "2021"
authors = ["Ilesh Thiada <ileshkt@gmail.com>"]
description = "A simple Rust wrapper for the official CurseForge API"
repository = "https://github.com/gorilla-devs/furse"
license = "MIT"
publish = ["crates-io"]
keywords = ["curseforge", "minecraft", "modding"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0", features = ["serde"] }
url = { version = "2", features = ["serde"] }
lazy_static = "1"
serde_repr = "0"
thiserror = "1"
murmur2 = "0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
