[package]
name = "furse"
version = "1.5.15"
edition = "2021"
authors = ["Ilesh Thiada <ileshkt@gmail.com>"]
description = "A simple Rust wrapper for the official CurseForge API"
repository = "https://github.com/gorilla-devs/furse"
license = "MIT"
publish = ["crates-io"]
keywords = ["curseforge", "minecraft", "modding"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.5", features = ["serde"] }
serde_repr = "0.1"
once_cell = "1.19"
thiserror = "1.0"
murmur2 = "0.1"

[dev-dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
